# spine

./: .gitignore
plugin/: CMakeLists.txt
plugin/include/spine/: Atlas.h  SkeletonData.h  SkeletonJson.h  extension.h
plugin/src/: main.cpp  ss_animation.cpp  ss_atlas.cpp  ss_drawable.cpp  ss_drawable.h  ss_extension.cpp
plugin/src/spine/: Atlas.c  SkeletonJson.c
